file(GLOB_RECURSE src "*.hpp" "*.cpp")

add_executable("Game" "${src}")

target_include_directories("Game" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")

target_link_libraries("Game" "SDL2main")
target_link_libraries("Game" "SDL2-static")
target_link_libraries("Game" "glad")
target_link_libraries("Game" "glm")
target_link_libraries("Game" "assimp")
target_link_libraries("Game" "stb")
target_link_libraries("Game" "entityx")
target_link_libraries("Game" "LinearMath")
target_link_libraries("Game" "BulletCollision")
target_link_libraries("Game" "BulletDynamics")
target_link_libraries("Game" "imgui")
target_link_libraries("Game" "phonon")
target_link_libraries("Game" "libsoundio_static")
target_link_libraries("Game" "libnyquist")
target_link_libraries("Game" "libwavpack")
target_link_libraries("Game" "libopus")
#target_link_libraries("Game" "RapidJSON")

if(MSVC)
	set_target_properties("Game" PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS /entry:mainCRTStartup")
	set_target_properties("Game" PROPERTIES LINK_FLAGS_MINSIZEREL "/SUBSYSTEM:WINDOWS /entry:mainCRTStartup")
endif(MSVC)